generalize apache commons' map tests using a junit5 parameterized class